--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Tim Howard
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+description: 
+github_username: 
 
 # Email and twitter are optional:
 email:
